fixed little gap in the navigation for mobile

--- a/src/assets/styles/_layouts.scss
+++ b/src/assets/styles/_layouts.scss
@@ -59,7 +59,7 @@ CHECK AboutUs.module.scss FOR REFERENCE IF YOU'RE NOT SURE!
     }
     .content {
       grid-template-columns: 1fr;
-      grid-template-rows: 60px 1fr 75px;
+      grid-template-rows: 60px 1fr 28px;
       
     }
 
